# tsukuba-prog2

./: .gitignore  CMakeLists.txt  Makefile  Makefile.default
include/: Ranking.h  Text.h  Texture.h  Timer.h
lib/: GenericTimer.c  Ranking.c  Text.c  Texture.c  Timer.c  glpng.c
src/: main.c
src/psd/: game.psd  game_b.psd  game_g.psd  game_h.psd  game_n.psd  game_v.psd  ranking.psd  ranking_input.psd  title.psd
test/: ranking.c
